[project]
name = "deepfake-voice-detection"
version = "0.1.0"
description = "Deepfake Voice Detection model"
authors = [
    {name = "Anish Sarkar",email = "104695310+AnishSarkar22@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
